--- a/index.ipynb
+++ b/index.ipynb
@@ -624,9 +624,9 @@
     "\n",
     "for ind, i in enumerate(preds):\n",
     "    print('-'*40)\n",
-    "    print('Model {pr} Metrics:'.format(ind + 1))\n",
-    "    print('Precision: {}'.format(None))\n",
-    "    print('Recall: {}'.format(None))\n",
+    "    print('Model {} Metrics:'.format(ind + 1))\n",
+    "    print('Precision: {}'.format(precision_score(labels,i)))\n",
+    "    print('Recall: {}'.format(rec))\n",
     "    print('Accuracy: {}'.format(None))\n",
     "    print('F1-Score: {}'.format(None))"
    ]
