--- a/index.ipynb
+++ b/index.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -679,18 +679,38 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------\n",
-      "Model 1 Classification Report:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-31ee7fbaf61b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Model {} Classification Report:\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mind\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pred' is not defined"
+      "Model 1 Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.76      0.88      0.82      3000\n",
+      "           1       0.95      0.88      0.91      7000\n",
+      "\n",
+      "   micro avg       0.88      0.88      0.88     10000\n",
+      "   macro avg       0.85      0.88      0.87     10000\n",
+      "weighted avg       0.89      0.88      0.88     10000\n",
+      "\n",
+      "----------------------------------------\n",
+      "Model 2 Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.35      0.55      0.43      3000\n",
+      "           1       0.74      0.56      0.64      7000\n",
+      "\n",
+      "   micro avg       0.56      0.56      0.56     10000\n",
+      "   macro avg       0.55      0.56      0.53     10000\n",
+      "weighted avg       0.63      0.56      0.58     10000\n",
+      "\n",
+      "----------------------------------------\n",
+      "Model 3 Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.61      0.77      0.68      3000\n",
+      "           1       0.89      0.79      0.83      7000\n",
+      "\n",
+      "   micro avg       0.78      0.78      0.78     10000\n",
+      "   macro avg       0.75      0.78      0.76     10000\n",
+      "weighted avg       0.81      0.78      0.79     10000\n",
+      "\n"
      ]
     }
    ],
@@ -700,7 +720,7 @@
     "for ind, i in enumerate(preds):\n",
     "    print('-'*40)\n",
     "    print(\"Model {} Classification Report:\".format(ind + 1))\n",
-    "    print(classification_report(labels,pred))"
+    "    print(classification_report(labels,i))"
    ]
   },
   {
